--- a/view/heroDetail.ejs
+++ b/view/heroDetail.ejs
@@ -7,7 +7,7 @@
             margin :0;
             padding: 0;
             font-family: 'Ubuntu', sans-serif;
-            background: linear-gradient(120deg,#55efc4,#a8dbe1);
+            background: linear-gradient(120deg,#4203d4,#a8dbe1);
             height: 100vh;
             overflow: hidden;
         }
@@ -61,13 +61,13 @@
             left: 0;
             width: 0%;
             height: 2px;
-            background: #00cec9;
+            background: #000ece;
             transition: .5s;
         }
         .text_field input:focus ~ label,
         .text_field input:valid ~ label{
             top: -5px;
-            color: #00cec9;
+            color: #0026ce;
         }
         .text_field input:focus ~ span::before,
         .text_field input:valid ~ span::before{
@@ -77,7 +77,7 @@
             width: 100%;
             height: 50px;
             border: 1px solid;
-            background: #00cec9;
+            background: #0015ce;
             border-radius: 25px;
             font-size: 18px;
             color: #e9f4fb ;
@@ -88,7 +88,7 @@
         }
         
         input[type="submit"]:hover{
-            border-color: #00cec9;
+            border-color: #0003ce;
             transition: .5s;
         }  
               
@@ -100,42 +100,84 @@
     <title>HERO DETAIL</title>
 </head>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="center">
 <body>
-    <h1>
-        Ubah Data Hero
+    <a href="/hero"><i class="fa fa-chevron-left" style="font-size: 30px; margin-left: 30px; margin-top: 30px; color: #000;"></i></a>
+    <h1 style="margin-top: -30px;">
+        <% if ( hero) { %> 
+            Ubah Hero
+        <%} else { %>
+            Tambah Hero
+        <% } %>
     </h1>
 
-    <form action="/hero/update" method="post">
+    <% if ( hero) { %> 
+        <form action="/hero/update" method="post">
+    <%} else { %>
+        <form action="/hero/add" method="post">
+    <% } %>
 
+        <% if ( hero) { %>
+            <input type="text" hidden name="id" value="<%= hero.data[0].id %>" required>
+            <div class="text_field">
+            <input type="text" name="name" value="<%= hero.data[0].name %>" required>
+            <span></span>
+            <label for="name">Name</label>
+            </div>
+            <div class="text_field">
+            <input type="text" name="role" value="<%= hero.data[0].role %>" required>
+            <span></span>
+            <label for="role">Role</label>
+            </div>
+            <div class="text_field">
+            <input type="text" name="skills" value="<%= hero.data[0].skills %>" required>
+            <span></span>
+            <label for="skills">Skills Ultimate</label>
+            </div>
+        <%} else { %>
+            <div class="text_field">
+            <input type="text" name="name" required>
+            <span></span>
+            <label for="name">Name</label>
+            </div>
+            <div class="text_field">
+            <input type="text" name="role" required>
+            <span></span>
+            <label for="role">Role</label>
+            </div>
+            <div class="text_field">
+            <input type="text" name="skills" required>
+            <span></span>
+            <label for="skills">Skills Ultimate</label>
+            </div>
+        <% } %>
+
+        <% if ( hero) { %> 
+            <input type="submit" onclick="dialog('Data telah diubah')" value="Update">
+        <%} else { %>
+            <input type="submit" onclick="dialog('Data telah ditambah')" value="Add">
+        <% } %>
         
-        <input type="text" hidden name="id" value="<%= hero.data[0].id %>" required>
-
-        <div class="text_field">
-        <input type="text" name="name" value="<%= hero.data[0].name %>" required>
-        <span></span>
-        <label for="name">Name</label>
-        </div>
-
-
-        <div class="text_field">
-        <input type="text" name="role" value="<%= hero.data[0].role %>" required>
-        <span></span>
-        <label for="role">Role</label>
-        </div>
-
-        <div class="text_field">
-        <input type="text" name="skills value="<%= hero.data[0].winrate %>" required>
-        <span></span>
-        <label for="skills">Skills</label>
-        </div>
-
-        <input type="submit" onclick="alert('Data berhasil di ubah')" value="update">
         <br>
         <br>
 
+        <footer style="text-align: center; padding-bottom: 10px;">
+            <p>&copy; 2022 FAJAR.SIDIK</p>
+        </footer>
     </form>
-
+       
 </body>
 
 </html>
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
+    function dialog(msg) {   
+        swal("Berhasil", msg, "success")
+        .then((value) => {
+            location.href = '/hero'
+        });
+    }  
+</script>
