--- a/view/index.ejs
+++ b/view/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
     <!-- style -->
     <style>
@@ -8,7 +9,7 @@
             margin :0;
             padding: 0;
             font-family: 'Ubuntu', sans-serif;
-            background: linear-gradient(120deg,#3B3B98,#7ed6df);
+            background: linear-gradient(120deg,#3B3B98,#9b7edf);
             height:100vh;
             overflow:auto;
             overflow: auto;
@@ -18,8 +19,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 50%;
-            background: white;
+            width: 80%;
+            background: #fff;
             border-radius: 10px;
             height: fit-content;            
         }
@@ -33,34 +34,11 @@
         .center h3{
             font-style: italic;
             font-size: medium;
-            color:#4b4f5a;
+            color:#0943e2;
             text-align:left ;
             margin-left: 5%;
             padding: 20px 0 20px 0;
             border-bottom: 1px solid silver;
-        }
-        .table{
-            text-align: left;
-            margin-left: 10%;
-            overflow: auto;
-            
-        }
-        .table tr,td,th{
-            text-align: left;
-            left: 5px;
-            padding: 0 20px;
-            bottom: 8px;
-            top: 8px;
-        }
-        
-        
-        .action td{
-            text-decoration: none;
-            background: none;
-            cursor: pointer;
-        }
-        .action td a{
-            font-size: 12px;
         }
         
         .center form{
@@ -87,7 +65,7 @@
             position: absolute;
             top: 50%;
             left: 5px;
-            color: #adadad;
+            color: #121213;
             transform: translateY(-50%);
             font-size: 14px;
             pointer-events: none;
@@ -114,12 +92,14 @@
         .text_field input:valid ~ span::before{
             width: 100%;
         }
-        .btnAdd input[type="submit"]{
-            width: 100%;
+        .btnAdd {
+            width: 90%;
+            margin-left: 5%;
             height: 50px;
             border: 1px solid;
-            background: #2691d9;
+            background: #021e9c;
             border-radius: 25px;
+            margin-top: 20px;
             font-size: 18px;
             color: #e9f4fb ;
             font-weight: 700;
@@ -128,144 +108,10 @@
         
         }
         
-        .btnAdd input[type="submit"]:hover{
-            border-color: #2691d9;
-            transition: .5s;
+        .btnAdd:hover{
+            background: #2691d9;
         }
-        @media screen and (max-width : 860px){
-            .box-hero{
-                text-align: left;
-                font-size: 1px;
-                overflow:scroll;
-                margin: 0;
-                
-            }
-            .box-hero tr,td,th{
-                text-align: left;
-                bottom: 8px;             
-            }
-            
-            .center h1{
-                color:#353b48;
-                font-size: large;
-                text-align:center ;
-                padding: 20px 0 20px 0;
-                border-bottom: 1px solid silver;
-            }
-            .center h3{
-                font-style: italic;
-                font-size: small;
-                color:#4b4f5a;
-                text-align:left ;
-                margin-left: 5%;
-                padding: 20px 0 20px 0;
-                border-bottom: 1px solid silver;
-            }
-            .action input{
-                font-size:7px;
-            }
-            .text_field input{
-                width: 100%;
-                padding: 0 5px;
-                height: 40px;
-                font-size: 9px;
-                border: none;
-                background: none;
-                outline: none;
-            }
-            
-            .text_field label{
-                position: absolute;
-                top: 50%;
-                left: 5px;
-                color: #adadad;
-                transform: translateY(-50%);
-                font-size: 9px;
-                pointer-events: none;
-                transition: .5s;
-            }
-            .btnAdd input[type="submit"]{
-                width: 100%;
-                height: 50px;
-                border: 1px solid;
-                background: #2691d9;
-                border-radius: 25px;
-                font-size: 12px;
-                color: #e9f4fb ;
-                font-weight: 600;
-                cursor: pointer;
-                outline: none;
-                
-            }
-        }
-        @media screen and (max-width : 1150px){
-            .table{
-                text-align: left;
-                margin-left: 10%;
-                overflow: auto;
-                font-size: 10px;
-                
-            }
-            .table tr,td,th{
-                text-align: left;
-                left: 5px;
-                padding: 0 15px;
-                bottom: 8px;              
-            }
-            
-            .center h1{
-                color:#353b48;
-                font-size: large;
-                text-align:center ;
-                padding: 20px 0 20px 0;
-                border-bottom: 1px solid silver;
-            }
-            .center h3{
-                font-style: italic;
-                font-size: small;
-                color:#4b4f5a;
-                text-align:left ;
-                margin-left: 5%;
-                padding: 20px 0 20px 0;
-                border-bottom: 1px solid silver;
-            }
-            .action input{
-                font-size: small;
-            }
-            .text_field input{
-                width: 100%;
-                padding: 0 5px;
-                height: 40px;
-                font-size: 9px;
-                border: none;
-                background: none;
-                outline: none;
-            }
-            
-            .text_field label{
-                position: absolute;
-                top: 50%;
-                left: 5px;
-                color: #adadad;
-                transform: translateY(-50%);
-                font-size: 9px;
-                pointer-events: none;
-                transition: .5s;
-            }
-            .btnAdd input[type="submit"]{
-                width: 100%;
-                height: 50px;
-                border: 1px solid;
-                background: #2691d9;
-                border-radius: 25px;
-                font-size: 12px;
-                color: #e9f4fb ;
-                font-weight: 600;
-                cursor: pointer;
-                outline: none;
-            
-            }
-        }
+       
     </style>
 
     <meta charset="UTF-8">
@@ -282,13 +128,13 @@
         <%= heroes.title %>
     </h1>
     <div class="box-hero">
-    <table class="table" style="padding:1px">
+    <table class="table table-striped" style="margin-top: -10px; text-align: center;">
         <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Role</th>
-            <th>Skills</th>
-            <th>Action</th>
+            <th style="text-align: center;">Id</th>
+            <th style="text-align: center;">Name</th>
+            <th style="text-align: center;">Role</th>
+            <th style="text-align: center;">Skills</th>
+            <th style="text-align: center;">Action</th>
         </tr>
         <% for (let i = 0; i < heroes.data.length; i++) 
             { %>
@@ -307,9 +153,9 @@
                     </td>
                     <form action="/hero/remove" method="post" class="action" >
                         <td>
-                            <a href="/hero/<%= heroes.data[i].id %>" style="text-decoration:none;  font-size:10px " >Edit</a>
+                            <a href="/hero/update/<%= heroes.data[i].id %>" style="text-decoration:none;  font-size:10px " ><i class="fa fa-pencil" style="font-size:18px;"></i></a>
                             <input type="text" hidden name="id" value="<%= heroes.data[i].id %>" />
-                            <input type="submit" onclick="alert('Hero Berhasil dihapus')" value="Delete" style="border: none; color: red; cursor:pointer; font-size:10px;" />
+                            <button type="submit" onclick="dialog('Data telah dihapus')" value="Delete" style="border: none; color: red; cursor:pointer; font-size:18px; background: none;" ><i class="fa fa-trash"></i></button>
                         </td>
                     </form>
                 </tr>
@@ -318,34 +164,27 @@
     </table>
     </div>
 
-    <h3>Tambahkan Hero --</h3>
-    <form action="/hero/add" method="post" autocomplete="off">
-        <div class="text_field">
-        <input type="text" name="name" required/>
-        <span></span>
-        <label for="name">Name</label>
-        </div>
+    <button class="btnAdd" type="submit" value="Add Heroes" onclick="location.href='/hero/create'" >
+    Add Hero
+    </button>
 
-        <div class="text_field">
-        <input type="text" name="role" required/>
-        <span></span>
-        <label for="role">Role</label>
-        </div>
+    <footer style="text-align:center; padding-bottom:10px;margin-top: 20px;">
+        <p>&copy; 2022 FAJAR.SIDIK</p>
+    </footer>
 
-        <div class="text_field">
-        <input type="text" name="skills" required />
-        <span></span>
-        <label for="skills">Skills</label>
-        </div>
-        
-        <div class="btnAdd">
-        <input type="submit" onclick="alert('Hero Berhasil ditambahkan')" value="Tambahkan" />
-        </div>
-        <br>
-        <br>
-
-    </form>
+    
 </div>
+
 </body>
 
 </html>
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
+    function dialog(msg) {   
+        swal("Berhasil", msg, "success")
+        .then((value) => {
+            location.href = '/hero'
+        });
+    }  
+</script>
